fixed button alignment on student course pages

--- a/Frontend/pages/style_Project_A.css
+++ b/Frontend/pages/style_Project_A.css
@@ -28,8 +28,8 @@ body{
 }
 .headerButton {
     position: absolute;
-    top: 10px;      
-    left: 20px;
+    top: 3px;      
+    left: 7px;
 
     padding: 6px 12px;
     
